# shellclear

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
shellclear/: Cargo.toml
shellclear/.cargo/: config.toml
shellclear/src/: clearer.rs  config.rs  data.rs  dialog.rs  emoji.rs  engine.rs  lib.rs  masker.rs  printer.rs  promter.rs  sensitive-envs.yaml  sensitive-patterns.yaml  shell.rs  state.rs
shellclear/src/exporter/: data.rs  mod.rs  table.rs  text.rs
shellclear/src/snapshots/: shellclear__clearer__tests__persist_sensitive_commands-2.snap  shellclear__clearer__tests__persist_sensitive_commands.snap  shellclear__clearer__tests__remove_sensitive_commands-2.snap  shellclear__clearer__tests__remove_sensitive_commands.snap  shellclear__config__test_config__can_delete_sensitive_ignore_file-2.snap  shellclear__config__test_config__can_delete_sensitive_ignore_file-3.snap  shellclear__config__test_config__can_delete_sensitive_ignore_file-4.snap  shellclear__config__test_config__can_delete_sensitive_patterns_file-3.snap  shellclear__config__test_config__can_delete_sensitive_patterns_file-4.snap  shellclear__config__test_config__can_delete_sensitive_patterns_from_file-2.snap  shellclear__config__test_config__can_delete_sensitive_patterns_from_file-3.snap  shellclear__config__test_config__can_delete_sensitive_patterns_from_file.snap  shellclear__config__test_config__can_get_sensitive_pattern_name.snap  shellclear__config__test_config__can_init-2.snap  shellclear__config__test_config__can_init-3.snap  shellclear__config__test_config__can_init.snap  shellclear__config__test_config__can_is_sensitive_pattern_file_exists-2.snap  shellclear__config__test_config__can_is_sensitive_pattern_file_exists-3.snap  shellclear__config__test_config__can_is_sensitive_pattern_file_exists.snap  shellclear__config__test_config__can_load_patterns_from_default_path-2.snap  shellclear__config__test_config__can_load_patterns_from_default_path.snap  shellclear__masker__test_masker__mask_results.snap  (+35 more)
shellclear/tests/: sensitive-patterns_test.rs
(+95 files in other folders)
