[package]
name = "shellclear"
version = "0.2.1"
edition = "2021"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rusty-ferris-club/shellclear"
homepage = "https://github.com/rusty-ferris-club/shellclear"
build = "build.rs"

[dependencies]
clap = { version = "3", features = ["cargo"], optional = true }
serde = "1"
serde_derive = "1"
serde_yaml = "^0.8.24"
serde_regex = "1.1.0"
env_logger = "^0.9.0"
log = "^0.4.17"
anyhow = "1"
console = "^0.15.0"
home = "0.5.3"
rayon = "1.5"
regex = "1"
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"
prettytable-rs = "^0.8"
dialoguer = "^0.10.1"
ctrlc = "3.2.2"
exitcode = "^1.1.2"

[dev-dependencies]
insta = { version = "1", features = ["backtrace"] }
tempdir = "0.3"

[build-dependencies]
vergen = "7"
anyhow = "1"


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

[[bin]]
name = "shellclear"
required-features = ["cli"]
