[package]
name = "shellclear"
version = "0.3.0"
edition = "2021"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rusty-ferris-club/shellclear"
homepage = "https://github.com/rusty-ferris-club/shellclear"
build = "build.rs"


[dependencies]
clap = { version = "3", features = ["cargo"], optional = true }
serde = "1"
serde_derive = "1"
serde_yaml = "^0.8.24"
serde_regex = "1.1.0"
env_logger = "^0.9.0"
log = "^0.4.17"
anyhow = "1"
console = "^0.15.0"
rayon = "1.5"
regex = "1"
chrono = "0.4"
strum = { version = "0.24", features = ["derive"] }
prettytable-rs = "^0.8"
requestty = "0.4.1"
exitcode = "^1.1.2"
dirs = "4.0"
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1", features = ["backtrace"] }
tempdir = "0.3"

[build-dependencies]
vergen = "7"
anyhow = "1"


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

[[bin]]
name = "shellclear"
required-features = ["cli"]
